--- a/package.json
+++ b/package.json
@@ -35,8 +35,14 @@
     "babel-loader": "^8.2.2",
     "concurrently": "^6.1.0",
     "css-loader": "^5.2.4",
-    "eslint": "^7.26.0",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "less": "^4.1.1",
     "mini-css-extract-plugin": "^1.6.0",
     "mongodb": "^3.6.7",
     "nodemon": "^2.0.7",
